# harnes

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  agent_architecture.html  docker-compose.yaml  pyproject.toml  v0_presentation.html  v1_architecture.html
config/: default.yaml
docs/: router_roadmap.md
scripts/: run_agent.py
skills/: general.yaml
src/harnes/: __init__.py  config.py
src/harnes/eval/: __init__.py  harness.py  history.py  multi_turn.py
src/harnes/eval/adapters/: __init__.py  memory_agent_bench.py
src/harnes/goals/: __init__.py  schema.py  store.py
src/harnes/llm/: __init__.py  client.py  embeddings.py
src/harnes/memory/: __init__.py  episodic.py  router.py  schema.py  semantic.py  world.py
src/harnes/metacycle/: __init__.py  commands.py  journal.py  reflect.py  schema.py  standing.py  tick.py  verifiers.py
src/harnes/operator/: __init__.py  __main__.py  cli.py
src/harnes/react/: __init__.py  critic.py  loop.py  schema.py
src/harnes/skills/: __init__.py  schema.py  store.py
src/harnes/telemetry/: __init__.py
src/harnes/tools/: __init__.py  registry.py  schema.py
src/harnes/tools/builtin/: __init__.py  io.py  recall.py
src/harnes/webui/: __init__.py  __main__.py  app.py  auth.py  config.py  deps.py  templating.py
src/harnes/webui/routers/: __init__.py  api_commands.py  api_config.py  api_cost.py  api_diff.py  api_eval.py  api_goals.py  api_journal.py  api_llm.py  api_memory.py  api_memory_volumes.py  api_reflect.py  api_replay.py  api_search.py  api_self_gen.py  api_skills.py  api_standing.py  api_trajectories.py  pages.py
src/harnes/webui/static/css/: app.css
src/harnes/webui/static/js/: app.js
src/harnes/webui/templates/: _macros.html  base.html  dashboard.html  health.html
src/harnes/webui/templates/commands/: list.html
src/harnes/webui/templates/config/: show.html
src/harnes/webui/templates/cost/: dashboard.html
src/harnes/webui/templates/diff/: trajectories.html
src/harnes/webui/templates/eval/: compare.html  detail.html  list.html
src/harnes/webui/templates/goals/: detail.html  list.html  new.html
src/harnes/webui/templates/journal/: list.html
src/harnes/webui/templates/llm/: list.html
src/harnes/webui/templates/memory/: explorer.html  volumes.html  world_graph.html
src/harnes/webui/templates/reflect/: explorer.html
src/harnes/webui/templates/replay/: trajectory.html
src/harnes/webui/templates/search/: results.html
src/harnes/webui/templates/self_gen/: dashboard.html
src/harnes/webui/templates/skills/: detail.html  list.html
src/harnes/webui/templates/standing/: dashboard.html
src/harnes/webui/templates/trajectories/: detail.html  list.html
tests/: conftest.py  test_composite_verifier.py  test_critic.py  test_e2e_smoke.py  test_embeddings.py  test_eval_harness.py  test_eval_history.py  test_eval_reliability.py  test_goal_store.py  test_hf_loader.py  test_journal.py  test_llm_client.py  test_memory.py  test_memory_agent_bench_adapter.py  test_metacycle_tick.py  test_multi_turn.py  test_operator_cli.py  test_react_loop.py  test_recall_tool.py  test_reflect.py  test_router_health.py  test_schemas.py  test_self_generation.py  test_skill_git_versioning.py  test_skill_registry.py  test_standing.py  test_tool_registry.py  test_verifiers.py  test_world.py
tests/fixtures/: memory_agent_bench_sample.json
tests/webui/: conftest.py  test_commands.py  test_goals.py  test_skills.py  test_smoke.py
webui/: Dockerfile  README.md
webui/tailwind/: build.sh  tailwind.config.js
