[project]
name = "harnes"
version = "0.0.1"
description = "Research wrapper around local LLMs — meta-cycle over a ReAct loop for a universal autonomous agent"
readme = "README.md"
requires-python = ">=3.12"
authors = [{ name = "pavel" }]
license = { text = "Proprietary" }

dependencies = [
    # Schema validation
    "pydantic>=2.0",
    "pydantic-settings>=2.0",

    # Logging
    "structlog>=24.0",

    # Configuration
    "pyyaml>=6.0",

    # CLI for operator channel
    "click>=8.0",

    # HTTP
    "httpx>=0.27",

    # LLM client (universal)
    "litellm>=1.0",

    # Memory backends
    "lancedb>=0.10",
    "qdrant-client>=1.10",
    "neo4j>=5.0",
    "graphiti-core>=0.3",
    "fastembed>=0.4",

    # Storage
    "sqlmodel>=0.0.20",

    # HuggingFace datasets (для MemoryAgentBench и других бенчмарков)
    "datasets>=2.20",
]

[project.optional-dependencies]
# Admin-консоль (отдельный сервис, см. src/harnes/webui и webui/Dockerfile).
# Не тянется в agent-image — там не нужна.
webui = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "jinja2>=3.1",
    "sse-starlette>=2.0",
    "python-multipart>=0.0.7",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "ruff>=0.7",
    "mypy>=1.10",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/harnes"]

[tool.uv]
package = true

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "N", "RUF"]

[tool.ruff.lint.per-file-ignores]
# webui — FastAPI идиома (Depends() в defaults) триггерит B008.
# 0.0.0.0 bind в docker-сервисе намеренно (S104).
# RUF001/RUF003 — смешанный кирилл./латин. в идентификаторах и комментариях
# нормален для русскоязычного проекта.
"src/harnes/webui/**/*.py" = ["B008", "B904", "S104", "RUF001", "RUF002", "RUF003"]
# UP042 (str, Enum) → StrEnum: проект единообразно использует (str, Enum)
# в goals/schema, react/schema и др. Менять только commands — inconsistency.
"src/harnes/metacycle/commands.py" = ["UP042", "RUF002", "RUF003"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_unused_ignores = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra --strict-markers"
asyncio_mode = "auto"
